# StudentPerformanceML

./: .dockerignore  .gitignore  404.html  AGENTS.md  LICENSE  README.md  api_test.dockerfile  cloudbuild-train.yaml  cloudbuild.yaml  dvc.yaml  index.html  objects.inv  pyproject.toml  tasks.py
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: build-only.yaml  deploy.yaml  dvc_data_check.yaml  linting.yaml  main.yml  pre-commit-update.yaml  tests.yaml  train.yaml
StudentPerfomanceML/: README.md  pyproject.toml
StudentPerfomanceML/.devcontainer/: devcontainer.json
StudentPerfomanceML/dockerfiles/: api.dockerfile  train.dockerfile
api/: index.html
configs/: __init__.py  pyproject.toml
configs/src/configs/: __init__.py
data/: index.html
dockerfiles/: api.dockerfile  evaluate.dockerfile  frontend.dockerfile  train.dockerfile
docs/: README.md  mkdocs.yaml  mkdocs.yml
docs/source/: api.md  data.md  index.md  models.md  usage.md
frontend/: ui.py
models/: index.html  model.pth
reports/: README.md
search/: search_index.json
src/stuperml/: api.py  data.py  evaluate.py  logger.py  model.py  sync.py  train.py  utils.py
tests/: test_api.py  test_data.py  test_model.py  test_utils.py
usage/: index.html
