[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "stuperml"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "MLOpsGroup101"},
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "configs",
    "stuperml",
    "fastapi==0.128.0",
    "kagglehub>=0.4.0",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "torch==2.9.1",
    "typer==0.15.1",
    "uvicorn==0.40.0",
    "matplotlib>=3.10.8",
    "google-api-python-client>=2.188.0",
    "google-cloud-storage>=3.8.0",
]

[dependency-groups]
dev = [
    "coverage==7.13.1",
    "invoke==2.2.0",
    "mkdocs-material==9.4.6",
    "mkdocs==1.6.1",
    "pre-commit==4.5.1",
    "pytest==8.3.4",
    "ruff==0.14.11",
    "mkdocstrings-python==2.0.1",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]
configs = { workspace = true, editable = true }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.workspace]
members = [
    "configs",
]

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]
